LIN-4281/LIN-4882 Add autoExpandMode to UIMultiSelect
Change-Id: I3cfec98073e8789f0f388f92bc604e1f910c297e